     configurable in amarokrc, see Amarok Handbook. Patch by Anmol Ahuja. (BR 177258)
   * Added support for files in Opus codec if Amarok is compiled against recent enough
     TagLib (post 1.8), patch by Martin Brodbeck. (BR 312905)
   * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)

  CHANGES:
   * Removed the splash screen.
   * Playlist-related actions were harmonized, double-clicking or pressing enter will
     append tracks to playlist, middle-clicking or using any "play media" action will
     prepend tracks to queue and immediately start playing; append or replace actions will
     no longer start playback. (BR 145468, BR 145490, BR 194549)
   * When a new collection plugin is enabled, its collections appear immediately without a
     need for restart.
   * Update the MusicBrainz tagger to MusicBrainz web service 2, make it show some more
     good suggestions for tagging, and add some options to help choosing the best results.
   * Add note about generating .mood files into Moodbar Options; patch by Harsh Gupta with
     tweaks by Matěj Laitl. (BR 289483)
   * Amarok now depends on Qt 4.8.2.
   * Add prepareToQuit() signal to Amarok.Window script bindings; patch by Anmol Ahuja.
     (BR 241066)
   * Data CDs are now recognized in Amarok; patch by Anmol Ahuja. (BR 316128)
   * On-Screen-Display now uses the system font instead of hardcoded sans-serif.
     (BR 248707)
   * Fancy behavior of some context menus showing different actions when Shift key is held
     has been reverted. All entries are now shown all the time.
   * The dynamic playlist behavior has changed. It will no longer generate "pretty good"
     playlists that do not fulfill the given biases. Instead it might add no song at all
     if given impossible-to-fulfill conditions.
   * The "tracks have been hidden in the playlist" warning when filtering the playlist is
     now displayed inside the playlist. (BR 260352)